--- a/frontend/forgot-password.html
+++ b/frontend/forgot-password.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recuperar Contraseña - TechStore</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- SweetAlert2 -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!-- Alerts personalizados (opcional si usas alertSuccess/alertError) -->
+    <script src="js/alerts.js"></script>
   </head>
 
   <body>
