--- a/frontend/home.html
+++ b/frontend/home.html
@@ -6,6 +6,15 @@
     <title>Bienvenido - TechStore</title>
 
     <link rel="stylesheet" href="css/styles.css" />
+    <!-- SweetAlert2 -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!-- Alerts personalizados -->
+    <script src="js/alerts.js"></script>
   </head>
 
   <body>
