--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -3,25 +3,130 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Carrito de Compras</title>
+    <title>Carrito de Compras - TechStore</title>
+    <link rel="stylesheet" href="css/styles.css" />
+
+    <!-- SweetAlert2 -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!-- Alerts personalizados -->
+    <script src="js/alerts.js"></script>
   </head>
   <body>
-    <h1>Carrito de Compras</h1>
+    <!-- HEADER -->
+    <header>
+      <div class="container">
+        <div class="header-content">
+          <a href="index.html" class="logo">
+            <img
+              src="https://img.icons8.com/nolan/64/processor.png"
+              alt="TechStore Logo"
+            />
+            <div class="logo-text">
+              <h1>TechStore</h1>
+              <p>Potencia tu PC</p>
+            </div>
+          </a>
 
-    <p><a href="index.html">← Volver al catálogo</a></p>
+          <div class="user-info">
+            <a href="cart.html" class="cart-icon-btn">
+              🛒
+              <span id="cartCount" class="cart-count">0</span>
+            </a>
 
-    <div id="cartContainer">
-      <p>Cargando carrito...</p>
-    </div>
+            <span id="userName" class="user-name" style="display: none"></span>
 
-    <hr />
+            <div class="accessibility-controls">
+              <button id="themeToggle" class="icon-btn" title="Cambiar tema">
+                🌙
+              </button>
+              <button
+                id="increaseFontBtn"
+                class="icon-btn"
+                title="Aumentar texto"
+              >
+                A⁺
+              </button>
+              <button
+                id="decreaseFontBtn"
+                class="icon-btn"
+                title="Reducir texto"
+              >
+                A⁻
+              </button>
+            </div>
 
-    <div id="cartTotal">
-      <h3>Total: $<span id="totalAmount">0.00</span></h3>
-    </div>
+            <a href="login.html" id="loginLink" class="btn-primary"
+              >Iniciar Sesión</a
+            >
+            <button id="logoutBtn" class="btn-secondary" style="display: none">
+              Cerrar Sesión
+            </button>
+          </div>
+        </div>
+      </div>
+    </header>
 
-    <button id="checkoutBtn" style="display: none">Proceder al Pago</button>
+    <!-- MAIN -->
+    <main>
+      <div class="container">
+        <div style="margin-bottom: 2rem">
+          <a href="index.html" class="btn-secondary">← Volver al catálogo</a>
+        </div>
 
+        <h2>Carrito de Compras</h2>
+
+        <div id="cartContainer" class="cart-container">
+          <p>Cargando carrito...</p>
+        </div>
+
+        <div class="cart-total-section">
+          <div class="cart-total-card">
+            <h3>Resumen del Pedido</h3>
+            <div class="total-line">
+              <span>Total:</span>
+              <span class="total-amount"
+                >$<span id="totalAmount">0.00</span></span
+              >
+            </div>
+            <button
+              id="checkoutBtn"
+              class="btn-primary w-100"
+              style="display: none; margin-top: 1rem"
+            >
+              Proceder al Pago 💳
+            </button>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-brand">
+            <h2>TechStore</h2>
+            <p>Potencia tu PC con los mejores componentes</p>
+          </div>
+          <div class="footer-links">
+            <a href="faq.html">FAQ</a>
+            <a href="nosotros.html">Nosotros</a>
+            <a href="contact.html">Contacto</a>
+            <a href="admin.html" id="adminLink" style="display: none">Admin</a>
+          </div>
+          <div class="footer-copyright">
+            <p>© 2025 TechStore | Proyecto Académico</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
+    <script src="js/accessibility.js"></script>
     <script src="js/cart.js"></script>
   </body>
 </html>
