--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -182,21 +182,62 @@
       </div>
     </main>
 
+    <!-- ============================================ -->
     <!-- FOOTER -->
+    <!-- ============================================ -->
     <footer>
       <div class="container">
         <div class="footer-content">
+          <!-- Brand -->
           <div class="footer-brand">
             <h2>TechStore</h2>
-            <p>Panel de Administración</p>
+            <p>Potencia tu PC con los mejores componentes</p>
           </div>
+
+          <!-- Links -->
+          <div class="footer-links">
+            <a href="faq.html">FAQ</a>
+            <a href="nosotros.html">Nosotros</a>
+            <a href="contact.html">Contacto</a>
+            <a href="nosotros.html">Nosotros</a>
+          </div>
+
+          <!-- Redes Sociales -->
+          <div class="footer-social">
+            <a
+              href="https://instagram.com/TU_USUARIO_AQUI"
+              target="_blank"
+              class="social-btn instagram-btn"
+            >
+              <svg
+                viewBox="0 0 24 24"
+                width="26"
+                height="26"
+                fill="currentColor"
+              >
+                <path
+                  d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 
+  5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10.75 
+  3a1.25 1.25 0 1 1 0 2.5 1.25 1.25 0 
+  0 1 0-2.5zM12 7.5a4.5 4.5 0 1 1 0 9 4.5 4.5 0 
+  0 1 0-9z"
+                />
+              </svg>
+            </a>
+          </div>
+
+          <!-- Copyright -->
           <div class="footer-copyright">
-            <p>© 2025 TechStore | Proyecto Académico</p>
+            <p>
+              © 2025 TechStore | Proyecto Académico - Programación de Sistemas
+              Web
+            </p>
           </div>
         </div>
       </div>
     </footer>
 
+    <!-- Scripts -->
     <script src="js/accessibility.js"></script>
     <script src="js/admin.js"></script>
   </body>
