--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,8 +30,12 @@
             <div class="user-info">
                 <!-- Carrito (solo icono circular) -->
                 <a href="cart.html" class="cart-icon-btn">
-                    🛒
-                    <span id="cartCount" class="cart-count">0</span>
+                  <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
+                      <path d="M7 4h-2l-1 2h2l3.6 7.59-1.35 2.45A1 1 0 0 0 9 18h10v-2H9.42l.93-1.67h7.45a1 1 0 0 0 .9-.55l3.28-6.58A1 1 0 0 0 21 5H6.21l-.94-2z"/>
+                      <circle cx="10" cy="20" r="1.5"/>
+                      <circle cx="18" cy="20" r="1.5"/>
+                  </svg>
+                  <span id="cartCount" class="cart-count">0</span>
                 </a>
 
                 <!-- Nombre del usuario (si está logueado) -->
@@ -47,6 +51,7 @@
                 <!-- Botones de login/logout -->
                 <a href="login.html" id="loginLink" class="btn-primary">Iniciar Sesión</a>
                 <button id="logoutBtn" class="btn-secondary" style="display: none;">Cerrar Sesión</button>
+                 <a href="admin.html" id="adminLink" class="btn-admin" style="display: none;">Admin</a>
             </div>
         </div>
     </div>
@@ -138,8 +143,24 @@
             <a href="faq.html">FAQ</a>
             <a href="nosotros.html">Nosotros</a>
             <a href="contact.html">Contacto</a>
-            <a href="admin.html">Admin</a>
           </div>
+
+          <!-- Redes Sociales -->
+          <div class="footer-social">
+            <a href="https://instagram.com/TU_USUARIO_AQUI" target="_blank" class="social-btn instagram-btn">
+      <svg viewBox="0 0 24 24" width="26" height="26" fill="currentColor">
+  <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 
+  5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10.75 
+  3a1.25 1.25 0 1 1 0 2.5 1.25 1.25 0 
+  0 1 0-2.5zM12 7.5a4.5 4.5 0 1 1 0 9 4.5 4.5 0 
+  0 1 0-9z"/>
+</svg>
+
+
+
+            </a>
+          </div>
+
 
           <!-- Copyright -->
           <div class="footer-copyright">
