--- a/frontend/login.html
+++ b/frontend/login.html
@@ -18,7 +18,7 @@
 
   <body>
     <!-- ============================================ -->
-    <!-- HEADER - MISMO DEL INDEX -->
+    <!-- HEADER -->
     <!-- ============================================ -->
     <header>
       <div class="container">
@@ -35,8 +35,28 @@
             </div>
           </a>
 
-          <!-- User Info -->
+          <!-- User Info & Controls -->
           <div class="user-info">
+            <!-- Carrito (solo icono circular) -->
+            <a href="cart.html" class="cart-icon-btn">
+              <svg
+                width="28"
+                height="28"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+              >
+                <path
+                  d="M7 4h-2l-1 2h2l3.6 7.59-1.35 2.45A1 1 0 0 0 9 18h10v-2H9.42l.93-1.67h7.45a1 1 0 0 0 .9-.55l3.28-6.58A1 1 0 0 0 21 5H6.21l-.94-2z"
+                />
+                <circle cx="10" cy="20" r="1.5" />
+                <circle cx="18" cy="20" r="1.5" />
+              </svg>
+              <span id="cartCount" class="cart-count">0</span>
+            </a>
+
+            <!-- Nombre del usuario (si está logueado) -->
+            <span id="userName" class="user-name" style="display: none"></span>
+
             <!-- Controles de accesibilidad -->
             <div class="accessibility-controls">
               <button id="themeToggle" class="icon-btn" title="Cambiar tema">
@@ -58,18 +78,24 @@
               </button>
             </div>
 
-            <!-- Botones login/logout -->
+            <!-- Botones de login/logout -->
             <a href="login.html" id="loginLink" class="btn-primary"
               >Iniciar Sesión</a
             >
             <button id="logoutBtn" class="btn-secondary" style="display: none">
               Cerrar Sesión
             </button>
+            <a
+              href="admin.html"
+              id="adminLink"
+              class="btn-admin"
+              style="display: none"
+              >Admin</a
+            >
           </div>
         </div>
       </div>
     </header>
-
     <!-- ============================================ -->
     <!-- MAIN -->
     <!-- ============================================ -->
@@ -98,7 +124,7 @@
                 id="refreshCaptcha"
                 class="btn-secondary w-100"
               >
-                🔄 Nuevo captcha
+                Nuevo captcha
               </button>
             </div>
 
@@ -144,7 +170,7 @@
           <div class="footer-links">
             <a href="faq.html">FAQ</a>
             <a href="contact.html">Contacto</a>
-            <a href="admin.html">Admin</a>
+            <a href="nosotros.html">Nosotros</a>
           </div>
 
           <div class="footer-copyright">© 2025 TechStore</div>
