--- a/frontend/register.html
+++ b/frontend/register.html
@@ -18,7 +18,7 @@
 
   <body>
     <!-- ============================================ -->
-    <!-- HEADER (idéntico al del index/login) -->
+    <!-- HEADER -->
     <!-- ============================================ -->
     <header>
       <div class="container">
@@ -35,9 +35,29 @@
             </div>
           </a>
 
-          <!-- User Info -->
+          <!-- User Info & Controls -->
           <div class="user-info">
-            <!-- Accesibilidad -->
+            <!-- Carrito (solo icono circular) -->
+            <a href="cart.html" class="cart-icon-btn">
+              <svg
+                width="28"
+                height="28"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+              >
+                <path
+                  d="M7 4h-2l-1 2h2l3.6 7.59-1.35 2.45A1 1 0 0 0 9 18h10v-2H9.42l.93-1.67h7.45a1 1 0 0 0 .9-.55l3.28-6.58A1 1 0 0 0 21 5H6.21l-.94-2z"
+                />
+                <circle cx="10" cy="20" r="1.5" />
+                <circle cx="18" cy="20" r="1.5" />
+              </svg>
+              <span id="cartCount" class="cart-count">0</span>
+            </a>
+
+            <!-- Nombre del usuario (si está logueado) -->
+            <span id="userName" class="user-name" style="display: none"></span>
+
+            <!-- Controles de accesibilidad -->
             <div class="accessibility-controls">
               <button id="themeToggle" class="icon-btn" title="Cambiar tema">
                 🌙
@@ -58,17 +78,24 @@
               </button>
             </div>
 
+            <!-- Botones de login/logout -->
             <a href="login.html" id="loginLink" class="btn-primary"
               >Iniciar Sesión</a
             >
             <button id="logoutBtn" class="btn-secondary" style="display: none">
               Cerrar Sesión
             </button>
+            <a
+              href="admin.html"
+              id="adminLink"
+              class="btn-admin"
+              style="display: none"
+              >Admin</a
+            >
           </div>
         </div>
       </div>
     </header>
-
     <!-- ============================================ -->
     <!-- MAIN -->
     <!-- ============================================ -->
@@ -117,22 +144,55 @@
     <footer>
       <div class="container">
         <div class="footer-content">
+          <!-- Brand -->
           <div class="footer-brand">
             <h2>TechStore</h2>
             <p>Potencia tu PC con los mejores componentes</p>
           </div>
 
+          <!-- Links -->
           <div class="footer-links">
             <a href="faq.html">FAQ</a>
+            <a href="nosotros.html">Nosotros</a>
             <a href="contact.html">Contacto</a>
-            <a href="admin.html">Admin</a>
           </div>
 
-          <div class="footer-copyright">© 2025 TechStore</div>
+          <!-- Redes Sociales -->
+          <div class="footer-social">
+            <a
+              href="https://instagram.com/TU_USUARIO_AQUI"
+              target="_blank"
+              class="social-btn instagram-btn"
+            >
+              <svg
+                viewBox="0 0 24 24"
+                width="26"
+                height="26"
+                fill="currentColor"
+              >
+                <path
+                  d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 
+  5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10.75 
+  3a1.25 1.25 0 1 1 0 2.5 1.25 1.25 0 
+  0 1 0-2.5zM12 7.5a4.5 4.5 0 1 1 0 9 4.5 4.5 0 
+  0 1 0-9z"
+                />
+              </svg>
+            </a>
+          </div>
+
+          <!-- Copyright -->
+          <div class="footer-copyright">
+            <p>
+              © 2025 TechStore | Proyecto Académico - Programación de Sistemas
+              Web
+            </p>
+          </div>
         </div>
       </div>
     </footer>
 
+    <!-- Scripts -->
     <script src="js/accessibility.js"></script>
     <script src="js/register.js"></script>
   </body>
