--- a/frontend/index.html
+++ b/frontend/index.html
@@ -138,12 +138,15 @@
             <p id="subscriptionMessage" style="margin-top: 1rem"></p>
           </div>
 
-          <!-- Links -->
           <div class="footer-links">
-            <a href="faq.html">FAQ</a>
-            <a href="nosotros.html">Nosotros</a>
-            <a href="contact.html">Contacto</a>
-          </div>
+    <a href="faq.html">FAQ</a>
+    <a href="nosotros.html">Nosotros</a>
+    <a href="contact.html">Contacto</a>
+    <a href="https://tiendaenlinea-eqmj.onrender.com/api-docs" target="_blank">
+        API Docs
+    </a>
+</div>
+
 
           <!-- Redes Sociales -->
           <div class="footer-social">
