--- a/frontend/nosotros.html
+++ b/frontend/nosotros.html
@@ -117,7 +117,7 @@
           <div class="about-info">
             <div class="info-item">
               <strong>Institución:</strong>
-              <span>Centro de Ciencias Básicas</span>
+              <span>Centro de Ciencias Básicas - UAA</span>
             </div>
             <div class="info-item">
               <strong>Profesora:</strong>
@@ -136,14 +136,19 @@
           <div class="team-grid">
             <!-- Miembro 1 -->
             <div class="team-card">
-              <div class="team-avatar">👤</div>
-              <h4>Nombre Integrante 1</h4>
-              <p class="team-role">Full Stack Developer</p>
+              <img
+                src="img/team/miembro1.jpg"
+                alt="Foto de Integrante 1"
+                class="team-photo"
+                onerror="this.src='https://res.cloudinary.com/dg2hxfe8i/image/upload/v1764887252/many_g1fu3l.jpg'"
+              />
+              <h4>Emmanuel De Jesús López García</h4>
+              <p class="team-role">Líder del Proyecto / Full Stack</p>
               <p class="team-desc">Backend & Database</p>
               <!-- Redes Sociales -->
               <div class="footer-social">
                 <a
-                  href="https://instagram.com/TU_USUARIO_AQUI"
+                  href="https://www.instagram.com/emmanuel_jlg?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                   target="_blank"
                   class="social-btn instagram-btn"
                 >
@@ -167,14 +172,19 @@
 
             <!-- Miembro 2 -->
             <div class="team-card">
-              <div class="team-avatar">👤</div>
-              <h4>Nombre Integrante 2</h4>
+              <img
+                src="img/team/miembro2.jpg"
+                alt="Foto de Integrante 2"
+                class="team-photo"
+                onerror="this.src='https://res.cloudinary.com/dg2hxfe8i/image/upload/v1764887156/lalo_xr6uho.jpg'"
+              />
+              <h4>Eduardo Pedroza López</h4>
               <p class="team-role">Frontend Developer</p>
               <p class="team-desc">UI/UX & Design</p>
               <!-- Redes Sociales -->
               <div class="footer-social">
                 <a
-                  href="https://instagram.com/TU_USUARIO_AQUI"
+                  href="https://www.instagram.com/eduardw_1?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
                   target="_blank"
                   class="social-btn instagram-btn"
                 >
@@ -198,14 +208,19 @@
 
             <!-- Miembro 3 -->
             <div class="team-card">
-              <div class="team-avatar">👤</div>
-              <h4>Nombre Integrante 3</h4>
+              <img
+                src="img/team/miembro3.jpg"
+                alt="Foto de Integrante 3"
+                class="team-photo"
+                onerror="this.src='https://res.cloudinary.com/dg2hxfe8i/image/upload/v1764887400/roger_czkqdu.png'"
+              />
+              <h4>Rogelio Uriel Gutiérrez Jiménez</h4>
               <p class="team-role">Backend Developer</p>
               <p class="team-desc">API & Security</p>
               <!-- Redes Sociales -->
               <div class="footer-social">
                 <a
-                  href="https://instagram.com/TU_USUARIO_AQUI"
+                  href="https://www.instagram.com/_roger_gutierrez?igsh=MWQ1d29pdWtmZ3Q2aA=="
                   target="_blank"
                   class="social-btn instagram-btn"
                 >
@@ -227,13 +242,155 @@
               </div>
             </div>
 
-            <!-- Agrega más según tu equipo -->
+            <!-- Miembro 4 -->
+            <div class="team-card">
+              <img
+                src="img/team/miembro4.jpg"
+                alt="Foto de Integrante 4"
+                class="team-photo"
+                onerror="this.src='https://res.cloudinary.com/dg2hxfe8i/image/upload/v1764887359/cesar_faaz1b.jpg'"
+              />
+              <h4>César Yael Ortiz Riestra</h4>
+              <p class="team-role">Frontend Developer</p>
+              <p class="team-desc">Components & Accessibility</p>
+              <!-- Redes Sociales -->
+              <div class="footer-social">
+                <a
+                  href="https://www.instagram.com/soy_cesar_o?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+                  target="_blank"
+                  class="social-btn instagram-btn"
+                >
+                  <svg
+                    viewBox="0 0 24 24"
+                    width="26"
+                    height="26"
+                    fill="currentColor"
+                  >
+                    <path
+                      d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 
+  5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10.75 
+  3a1.25 1.25 0 1 1 0 2.5 1.25 1.25 0 
+  0 1 0-2.5zM12 7.5a4.5 4.5 0 1 1 0 9 4.5 4.5 0 
+  0 1 0-9z"
+                    />
+                  </svg>
+                </a>
+              </div>
+            </div>
+
+            <!-- Miembro 5 -->
+            <div class="team-card">
+              <img
+                src="img/team/miembro5.jpg"
+                alt="Foto de Integrante 5"
+                class="team-photo"
+                onerror="this.src='https://res.cloudinary.com/dg2hxfe8i/image/upload/v1764887291/diego_thvbpk.jpg'"
+              />
+              <h4>Diego Alejandro Ramos Vazquez</h4>
+              <p class="team-role">Backend Developer</p>
+              <p class="team-desc">Testing & Deployment</p>
+              <!-- Redes Sociales
+              <div class="footer-social">
+                <a
+                  href="https://instagram.com/TU_USUARIO_AQUI"
+                  target="_blank"
+                  class="social-btn instagram-btn"
+                >
+                  <svg
+                    viewBox="0 0 24 24"
+                    width="26"
+                    height="26"
+                    fill="currentColor"
+                  >
+                    <path
+                      d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 
+  5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10.75 
+  3a1.25 1.25 0 1 1 0 2.5 1.25 1.25 0 
+  0 1 0-2.5zM12 7.5a4.5 4.5 0 1 1 0 9 4.5 4.5 0 
+  0 1 0-9z"
+                    />
+                  </svg>
+                </a>
+              </div> -->
+            </div>
+
+            <!-- Miembro 6 -->
+            <div class="team-card">
+              <img
+                src="img/team/miembro6.jpg"
+                alt="Foto de Integrante 6"
+                class="team-photo"
+                onerror="this.src='https://res.cloudinary.com/dg2hxfe8i/image/upload/v1764887367/nestor_tc2ldl.jpg'"
+              />
+              <h4>Néstor Gael Martínez Ibarra</h4>
+              <p class="team-role">Database Developer</p>
+              <p class="team-desc">Database Design & Optimization</p>
+              <!-- Redes Sociales -->
+              <div class="footer-social">
+                <a
+                  href="https://www.instagram.com/nestorgael_1?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+                  target="_blank"
+                  class="social-btn instagram-btn"
+                >
+                  <svg
+                    viewBox="0 0 24 24"
+                    width="26"
+                    height="26"
+                    fill="currentColor"
+                  >
+                    <path
+                      d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 
+  5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10.75 
+  3a1.25 1.25 0 1 1 0 2.5 1.25 1.25 0 
+  0 1 0-2.5zM12 7.5a4.5 4.5 0 1 1 0 9 4.5 4.5 0 
+  0 1 0-9z"
+                    />
+                  </svg>
+                </a>
+              </div>
+            </div>
+
+            <!-- Miembro 7 -->
+            <div class="team-card">
+              <img
+                src="img/team/miembro7.jpg"
+                alt="Foto de Integrante 7"
+                class="team-photo"
+                onerror="this.src='https://res.cloudinary.com/dg2hxfe8i/image/upload/v1764887318/roma_l0qhxb.jpg'"
+              />
+              <h4>Romain Díaz</h4>
+              <p class="team-role">Full Stack Developer</p>
+              <p class="team-desc">Integration & Documentation</p>
+              <!-- Redes Sociales -->
+              <div class="footer-social">
+                <a
+                  href="https://www.instagram.com/romain_diaz1?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
+                  target="_blank"
+                  class="social-btn instagram-btn"
+                >
+                  <svg
+                    viewBox="0 0 24 24"
+                    width="26"
+                    height="26"
+                    fill="currentColor"
+                  >
+                    <path
+                      d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 
+  5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10.75 
+  3a1.25 1.25 0 1 1 0 2.5 1.25 1.25 0 
+  0 1 0-2.5zM12 7.5a4.5 4.5 0 1 1 0 9 4.5 4.5 0 
+  0 1 0-9z"
+                    />
+                  </svg>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
 
         <!-- SECCIÓN: TECNOLOGÍAS -->
         <div class="about-section">
-          <h3>💻 Tecnologías</h3>
+          <h3>💻 Tecnologías Utilizadas</h3>
           <div class="tech-grid">
             <div class="tech-badge">HTML/CSS/JS</div>
             <div class="tech-badge">Node.js</div>
@@ -243,6 +400,7 @@
             <div class="tech-badge">Cloudinary</div>
             <div class="tech-badge">Chart.js</div>
             <div class="tech-badge">PDFKit</div>
+            <div class="tech-badge">Render</div>
           </div>
         </div>
       </div>
@@ -261,6 +419,12 @@
             <a href="faq.html">FAQ</a>
             <a href="nosotros.html">Nosotros</a>
             <a href="contact.html">Contacto</a>
+            <a
+              href="https://tiendaenlinea-eqmj.onrender.com/api-docs"
+              target="_blank"
+            >
+              API Docs
+            </a>
           </div>
 
           <!-- Redes Sociales -->
