--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -200,6 +200,12 @@
             <a href="nosotros.html">Nosotros</a>
             <a href="contact.html">Contacto</a>
             <a href="nosotros.html">Nosotros</a>
+            <a
+              href="https://tiendaenlinea-eqmj.onrender.com/api-docs"
+              target="_blank"
+            >
+              API Docs
+            </a>
           </div>
 
           <!-- Redes Sociales -->
