--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -148,6 +148,12 @@
             <a href="faq.html">FAQ</a>
             <a href="nosotros.html">Nosotros</a>
             <a href="contact.html">Contacto</a>
+            <a
+              href="https://tiendaenlinea-eqmj.onrender.com/api-docs"
+              target="_blank"
+            >
+              API Docs
+            </a>
           </div>
 
           <!-- Redes Sociales -->
