--- a/frontend/login.html
+++ b/frontend/login.html
@@ -171,6 +171,12 @@
             <a href="faq.html">FAQ</a>
             <a href="contact.html">Contacto</a>
             <a href="nosotros.html">Nosotros</a>
+            <a
+              href="https://tiendaenlinea-eqmj.onrender.com/api-docs"
+              target="_blank"
+            >
+              API Docs
+            </a>
           </div>
 
           <div class="footer-copyright">© 2025 TechStore</div>
