--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -168,7 +168,7 @@
           <!-- Redes Sociales -->
           <div class="footer-social">
             <a
-              href="https://instagram.com/TU_USUARIO_AQUI"
+              href="https://www.instagram.com/tech.storeof?igsh=MTljanEwMDdrNzZxMA=="
               target="_blank"
               class="social-btn instagram-btn"
             >
@@ -203,5 +203,6 @@
     <!-- Scripts -->
     <script src="js/accessibility.js"></script>
     <script src="js/contact.js"></script>
+    <script src="js/header.js"></script>
   </body>
 </html>
