--- a/frontend/index.html
+++ b/frontend/index.html
@@ -150,7 +150,7 @@
 
           <!-- Redes Sociales -->
           <div class="footer-social">
-            <a href="https://instagram.com/TU_USUARIO_AQUI" target="_blank" class="social-btn instagram-btn">
+            <a href="https://www.instagram.com/tech.storeof?igsh=MTljanEwMDdrNzZxMA==" target="_blank" class="social-btn instagram-btn">
       <svg viewBox="0 0 24 24" width="26" height="26" fill="currentColor">
   <path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 
   5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10.75 
