--- a/frontend/login.html
+++ b/frontend/login.html
@@ -162,15 +162,32 @@
     <footer>
       <div class="container">
         <div class="footer-content">
+          <!-- Brand -->
           <div class="footer-brand">
             <h2>TechStore</h2>
             <p>Potencia tu PC con los mejores componentes</p>
           </div>
 
+          <!-- Newsletter -->
+          <div class="newsletter">
+            <h3>Newsletter</h3>
+            <p>Suscríbete y recibe un cupón de descuento</p>
+            <form id="subscriptionForm" class="newsletter-form">
+              <input
+                type="email"
+                id="subscriptionEmail"
+                placeholder="tu@email.com"
+                required
+              />
+              <button type="submit" class="btn-primary">Suscribirme</button>
+            </form>
+            <p id="subscriptionMessage" style="margin-top: 1rem"></p>
+          </div>
+
           <div class="footer-links">
             <a href="faq.html">FAQ</a>
-            <a href="contact.html">Contacto</a>
             <a href="nosotros.html">Nosotros</a>
+            <a href="contact.html">Contacto</a>
             <a
               href="https://tiendaenlinea-eqmj.onrender.com/api-docs"
               target="_blank"
@@ -179,7 +196,37 @@
             </a>
           </div>
 
-          <div class="footer-copyright">© 2025 TechStore</div>
+          <!-- Redes Sociales -->
+          <div class="footer-social">
+            <a
+              href="https://www.instagram.com/tech.storeof?igsh=MTljanEwMDdrNzZxMA=="
+              target="_blank"
+              class="social-btn instagram-btn"
+            >
+              <svg
+                viewBox="0 0 24 24"
+                width="26"
+                height="26"
+                fill="currentColor"
+              >
+                <path
+                  d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 
+  5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm10.75 
+  3a1.25 1.25 0 1 1 0 2.5 1.25 1.25 0 
+  0 1 0-2.5zM12 7.5a4.5 4.5 0 1 1 0 9 4.5 4.5 0 
+  0 1 0-9z"
+                />
+              </svg>
+            </a>
+          </div>
+
+          <!-- Copyright -->
+          <div class="footer-copyright">
+            <p>
+              © 2025 TechStore | Proyecto Académico - Programación de Sistemas
+              Web
+            </p>
+          </div>
         </div>
       </div>
     </footer>
