--- a/frontend/nosotros.html
+++ b/frontend/nosotros.html
@@ -430,7 +430,7 @@
           <!-- Redes Sociales -->
           <div class="footer-social">
             <a
-              href="https://instagram.com/TU_USUARIO_AQUI"
+              href="https://www.instagram.com/tech.storeof?igsh=MTljanEwMDdrNzZxMA=="
               target="_blank"
               class="social-btn instagram-btn"
             >
